feat: analytics backend changes
